--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -30,6 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    packagingOptions {
+        exclude('META-INF/io.netty.versions.properties')
+        exclude('META-INF/INDEX.LIST')
+    }
 }
 
 dependencies {
@@ -42,4 +47,27 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // library teg server
+    implementation "com.github.AdeDom:TheEggGame-Server:0.3.7"
+
+    // retrofit & logging
+    def retrofit2 = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    // facebook stetho logging network
+    def facebookStetho = "1.5.1"
+    implementation "com.facebook.stetho:stetho:$facebookStetho"
+    implementation "com.facebook.stetho:stetho-okhttp3:$facebookStetho"
+
+    // kotlin coroutines
+    def coroutines = "1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
+
+    // load image
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
 }
