--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TegReport">
+        <activity android:name=".presentation.multiitem.MultiItemActivity" />
+        <activity android:name=".presentation.singleitem.SingleItemActivity" />
+        <activity android:name=".presentation.multicollection.MultiCollectionActivity" />
+        <activity android:name=".presentation.itemcollection.ItemCollectionActivity" />
+        <activity android:name=".presentation.aboutroom.AboutRoomActivity" />
+        <activity android:name=".presentation.logactive.LogActiveActivity" />
+        <activity android:name=".presentation.player.PlayerActivity" />
         <activity android:name=".presentation.testfinal.FinalActivity" />
-        <activity android:name=".presentation.MainActivity">
+        <activity android:name=".presentation.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
